# nebuly-sdk

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  architecture.md  classes.mmd  main.py  packages.mmd  pyproject.toml  sonar-project.properties  todo.md
.github/workflows/: .ci-template.yaml  ci.yaml  pull-requests.yaml  release.yaml
docs/python/: api_reference.mdx  quickstart.mdx
docs/python/integrations/: azure_openai.mdx  openai.mdx  overview.mdx
docs/python/tutorials/: azure_openai.mdx  langchain.mdx  openai.mdx  overview.mdx
examples/: basic_example.py
nebuly/: __init__.py  api_key.py  config.py  consumers.py  contextmanager.py  entities.py  event_pairing_dispatchers.py  event_parsers.py  events.py  example.py  exceptions.py  handlers.py  init.py  langchain.py  monkey_patcher.py  monkey_patching.py  nebuly.py  observer.py  observers.py  patcher.py  publisher.py  requests.py  tracking_handlers.py  utils.py
nebuly/ab_testing/: __init__.py  main.py  types.py
nebuly/core/: apis.py  clients.py  core.py  exceptions.py  nebuly_client.py  queues.py  schemas.py  services.py
nebuly/providers/: anthropic.py  aws_bedrock.py  base.py  cohere.py  common.py  google.py  huggingface.py  huggingface_hub.py  langchain.py  llama_index.py  openai.py  openai_legacy.py  utils.py  vertexai.py
nebuly/trackers/: openai.py  pytorch.py
nebuly/tracking/: __init__.py  actions.py  types.py
nebuly/utils/: functions.py  logger.py  nebuly_logger.py  task_detector.py
tests/: common.py  huge_message.json  test_anthropic.py  test_aws_bedrock.py  test_cohere.py  test_common.py  test_consumers.py  test_contextmanager.py  test_crop_spans.py  test_entities.py  test_event_pairing_dispatchers.py  test_google_palm.py  test_handlers.py  test_huggingface.py  test_huggingface_hub.py  test_init.py  test_langchain.py  test_monkey_patcher.py  test_monkey_patching.py  test_nebuly.py  test_observer.py  test_observers.py  test_openai.py  test_openai_legacy.py  test_patcher.py  test_publisher.py  test_vertexai.py  to_patch.py
tests/core/: test_apis.py  test_clients.py  test_nebuly_client.py  test_queues.py  test_services.py
tests/providers/: common.py  test_anthropic.py  test_aws_bedrock.py  test_cohere.py  test_google_palm.py  test_huggingface.py  test_huggingface_hub.py  test_langchain.py  test_langchain_handler.py  test_llama_index.py  test_openai.py  test_openai_assistant.py  test_openai_legacy.py  test_vertexai.py
tests/providers/test_index/: default__vector_store.json  docstore.json  index_store.json
tests/trackers/: openai_data.py  test_openai.py
tests/utils/: test_functions.py  test_task_detector.py
