[tool.poetry]
name = "nebuly"
version = "0.2.1"
description = "The SDK for instrumenting applications for tracking AI costs."
authors = ["Nebuly"]
readme = "README.md"
packages = [{include = "nebuly"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pytest = "^7.4.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^2.17.5"
ruff = "^0.0.287"
mypy = "^1.5.1"
pytest = "^7.4.1"
hypothesis = "^6.84.0"
openai = {extras = ["datalib"], version = "^0.28.0"}
isort = "^5.12.0"
bandit = "^1.7.5"
safety = "^2.3.5"
pre-commit = "^3.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
google-cloud-aiplatform = "^1.33.1"
cohere = "^4.27"
anthropic = "^0.3.11"
langchain = { version = "^0.0.306", python=">=3.8.1,<4.0"}
google-generativeai = { version = "^0.2", python=">=3.9,<4.0"}
transformers = "^4.34.0"
torch = "^1.13.1"
boto3 = "^1.28.63"
types-urllib3 = "^1.26.25.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
  "invalid-name",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "too-few-public-methods",
  "fixme",
]

[tool.pylint.format]
max-line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.coverage.html]
show_contexts = true

[tool.mypy]
strict = true
