[tool.poetry]
name = "nebuly"
version = "0.3.35"
description = "The SDK for instrumenting applications for tracking AI costs."
authors = ["Nebuly"]
readme = "README.md"
packages = [{ include = "nebuly" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
packaging = "^23.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.3"
pylint = "^2.17.5"
ruff = "^0.0.287"
mypy = "^1.5.1"
hypothesis = "^6.84.0"
openai = { extras = ["datalib"], version = "^1.1.0" }
isort = "^5.12.0"
bandit = "^1.7.5"
safety = "^2.3.5"
pre-commit = "^3.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
google-cloud-aiplatform = "^1.42.1"
cohere = "^4.48"
anthropic = "^0.16.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
google-generativeai = "^0.3.2"
transformers = "^4.38.0"
torch = ">=1.13.1"
boto3 = "^1.34.47"
types-urllib3 = "^1.26.25.14"
llama-index = "^0.10.11"
faiss-cpu = "^1.7.4"
langchainhub = "^0.1.21"
huggingface-hub = "^0.20.3"
langgraph = "^0.2.34"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "fixme",
]

[tool.pylint.format]
max-line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.coverage.html]
show_contexts = true

[tool.mypy]
strict = true
